@@ -179,7 +179,16 @@
 								<size>20</size>
 							</config>
 						</TCEforms>
-				  </sortOrder>
+					</sortOrder>
+					<sortOrderForLeaders>
+						<TCEforms>
+						<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.sortOrderForLeaders</label>
+							<config>
+								<type>input</type>
+								<size>20</size>
+							</config>
+						</TCEforms>
+					</sortOrderForLeaders>
 				</el>
 			</ROOT>
 		</s_teamlist>
